# souffle

./: .gitignore  .travis.yml  _a_d_tto_records_8cpp.html  _a_d_tto_records_8cpp__incl.map  _a_d_tto_records_8cpp__incl.md5  _a_d_tto_records_8cpp_source.html  _a_d_tto_records_8h.html  _a_d_tto_records_8h__dep__incl.map  _a_d_tto_records_8h__dep__incl.md5  _a_d_tto_records_8h__incl.map  _a_d_tto_records_8h__incl.md5  _a_d_tto_records_8h_source.html  _abstract_aggregate_8h.html  _abstract_aggregate_8h__dep__incl.map  _abstract_aggregate_8h__dep__incl.md5  _abstract_aggregate_8h__incl.map  _abstract_aggregate_8h__incl.md5  _abstract_aggregate_8h_source.html  _abstract_choice_8h.html  _abstract_choice_8h__dep__incl.map  _abstract_choice_8h__dep__incl.md5  _abstract_choice_8h__incl.map  _abstract_choice_8h__incl.md5  _abstract_choice_8h_source.html  _abstract_conditional_8h.html  _abstract_conditional_8h__dep__incl.map  _abstract_conditional_8h__dep__incl.md5  _abstract_conditional_8h__incl.map  _abstract_conditional_8h__incl.md5  _abstract_conditional_8h_source.html  _abstract_existence_check_8h.html  _abstract_existence_check_8h__dep__incl.map  _abstract_existence_check_8h__dep__incl.md5  _abstract_existence_check_8h__incl.map  _abstract_existence_check_8h__incl.md5  _abstract_existence_check_8h_source.html  _abstract_log_8h.html  _abstract_log_8h__dep__incl.map  _abstract_log_8h__dep__incl.md5  _abstract_log_8h__incl.map  (+7132 more)
src/: .gitignore  AggregateOp.h  AstProgram.h  AstToRamTranslator.cpp  AstToRamTranslator.h  AstTransforms.h  BinaryConstraintOps.h  Constraints.h  DebugReport.cpp  ErrorReport.h  ExplainProvenanceImpl.h  FunctorOps.cpp  FunctorOps.h  Global.cpp  GraphUtils.h  MagicSet.cpp  MagicSet.h  Makefile.am  ParserUtils.cpp  ParserUtils.h  RamTypes.h  ReadStream.h  RelationTag.h  TypeAttribute.cpp  TypeAttribute.h  Util.cpp  WriteStream.h  main.cpp  parser.yy  scanner.ll  souffle-compile.in
src/ast/: ADTinit.h  Aggregator.h  AlgebraicDataType.h  Argument.h  AstProgram.h  AstUtils.cpp  AstUtils.h  Atom.h  Attribute.h  BinaryConstraint.h  BindingStore.cpp  BindingStore.h  BooleanConstraint.h  BranchDeclaration.h  BranchInit.h  Clause.h  Component.h  ComponentInit.h  ComponentType.h  Constant.h  Constraint.h  Counter.h  Directive.h  ExecutionOrder.h  ExecutionPlan.h  Functor.h  FunctorDeclaration.h  IO.h  IntrinsicFunctor.h  LambdaNodeMapper.h  Literal.h  Negation.h  NilConstant.h  Node.h  NodeMapper.h  NumericConstant.h  Pragma.h  Program.cpp  Program.h  ProvenanceNegation.h  (+21 more)
src/ast/analysis/: AuxArity.cpp  AuxArity.h  ClauseNormalisation.cpp  ClauseNormalisation.h  ComponentLookup.cpp  ComponentLookup.h  Constraint.h  ConstraintSystem.h  Ground.cpp  Ground.h  IOType.cpp  IOType.h  PrecedenceGraph.cpp  PrecedenceGraph.h  ProfileUse.cpp  ProfileUse.h  RecursiveClauses.cpp  RecursiveClauses.h  RedundantRelations.cpp  RedundantRelations.h  RelationDetailCache.cpp  RelationDetailCache.h  RelationSchedule.cpp  RelationSchedule.h  SCCGraph.cpp  SCCGraph.h  SumTypeBranches.cpp  SumTypeBranches.h  TopologicallySortedSCCGraph.cpp  TopologicallySortedSCCGraph.h  Type.cpp  Type.h  TypeEnvironment.cpp  TypeEnvironment.h  TypeSystem.cpp  TypeSystem.h
src/ast/tests/: Makefile.am  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  type_system_test.cpp
src/ast/transform/: ADTtoRecords.cpp  ADTtoRecords.h  AddNullariesToAtomlessAggregates.cpp  AddNullariesToAtomlessAggregates.h  AstTransforms.h  ComponentChecker.cpp  ComponentChecker.h  ComponentInstantiation.cpp  ComponentInstantiation.h  Conditional.h  DebugReporter.cpp  DebugReporter.h  ExecutionPlanChecker.cpp  ExecutionPlanChecker.h  Fixpoint.h  FoldAnonymousRecords.cpp  FoldAnonymousRecords.h  GroundedTermsChecker.cpp  GroundedTermsChecker.h  IOAttributes.h  IODefaults.h  InlineRelations.cpp  InlineRelations.h  MagicSet.cpp  MagicSet.h  MaterializeAggregationQueries.cpp  Meta.cpp  (+53 more)
src/ast2ram/: AstToRamTranslator.cpp  AstToRamTranslator.h
src/interpreter/: InterpreterBTreeIndex.cpp  InterpreterBrieIndex.cpp  InterpreterContext.h  InterpreterEngine.cpp  InterpreterEngine.h  InterpreterEqrelIndex.cpp  InterpreterGenerator.h  InterpreterIndex.cpp  InterpreterIndex.h  InterpreterIndirectIndex.cpp  InterpreterNode.h  InterpreterPreamble.h  InterpreterProgInterface.h  InterpreterProvenanceIndex.cpp  InterpreterRelation.cpp  InterpreterRelation.h  InterpreterViewContext.h
src/io/: ReadStream.h  ReadStreamCSV.h  WriteStream.h  WriteStreamCSV.h
src/parser/: ParserDriver.cpp  ParserDriver.h  ParserUtils.cpp  ParserUtils.h  SrcLocation.cpp  parser.yy  scanner.ll
src/ram/: AbstractAggregate.h  AbstractChoice.h  AbstractConditional.h  AbstractExistenceCheck.h  AbstractLog.h  AbstractOperator.h  AbstractParallel.h  Aggregate.h  AutoIncrement.h  BinRelationStatement.h  Break.h  Call.h  Choice.h  Clear.h  Condition.h  Conjunction.h  Constant.h  Constraint.h  DebugInfo.h  EmptinessCheck.h  ExistenceCheck.h  Exit.h  Expression.h  Extend.h  False.h  Filter.h  FloatConstant.h  IO.h  IndexAggregate.h  IndexChoice.h  IndexOperation.h  IndexScan.h  IntrinsicOperator.h  LambdaNodeMapper.h  ListStatement.h  LogRelationTimer.h  LogSize.h  LogTimer.h  Loop.h  Negation.h  (+38 more)
src/reports/: DebugReport.h  ErrorReport.h
src/synthesiser/: Relation.cpp  Relation.h  Synthesiser.cpp  Synthesiser.h  SynthesiserRelation.cpp  SynthesiserRelation.h
src/tests/: Makefile.am  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  binary_relation_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_tuple_test.cpp  constraints_test.cpp  eqrel_datastructure_test.cpp  graph_utils_test.cpp  interpreter_relation_test.cpp  matching_test.cpp  max_matching_test.cpp  ram_arithmetic_test.cpp  ram_condition_equal_clone_test.cpp  ram_expression_equal_clone_test.cpp  ram_operation_equal_clone_test.cpp  ram_relation_test.cpp  ram_statement_equal_clone_test.cpp  ram_type_conversion_test.cpp  table_test.cpp  type_system_test.cpp
(+164 files in other folders)
